--- a/Web Development/TinDog/css/styles.css
+++ b/Web Development/TinDog/css/styles.css
@@ -5,6 +5,15 @@ body {
 
 h1 {font-family: "Montserrat";  font-size: 3.5rem;  line-height: 1.5;  font-weight: 900;}
 
+h3 {
+  font-family:"Montserrat";
+  font-weight: 550;
+}
+
+p {
+  color: #8f8f8f;
+}
+
 .container-fluid{
   padding:3% 15%;
 }
@@ -44,4 +53,23 @@ h1 {font-family: "Montserrat";  font-size: 3.5rem;  line-height: 1.5;  font-weig
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+}
+
+/* Feature Section */
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
 }
