bootstrap carousel complete

--- a/Web Development/TinDog/css/styles.css
+++ b/Web Development/TinDog/css/styles.css
@@ -5,9 +5,13 @@ body {
 
 h1 {font-family: "Montserrat";  font-size: 3.5rem;  line-height: 1.5;  font-weight: 900;}
 
+h2 {
+  font-family: "Montserrat";  font-size: 3rem;  line-height: 1.5;
+}
+
 h3 {
   font-family:"Montserrat";
-  font-weight: 550;
+  font-weight: 600;
 }
 
 p {
@@ -72,4 +76,33 @@ p {
 
 .icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonials Section */
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+#press {
+  padding-bottom: 3%;
+  text-align: center;
+  background-color: #ef8172;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+
 }
