added css styling to todolist

--- a/Web Development/toDoList EJS/views/list.ejs
+++ b/Web Development/toDoList EJS/views/list.ejs
@@ -3,20 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1> <%= kindOfDay %> </h1>
 
-<form action="/" method="post">
-  <input type="text" name="newItem">
-  <button class="btn btn-warning" type="submit" name="button">Add</button>
-</form>
+    <div class="box" id="heading">
+      <h1> <%= kindOfDay %> </h1>
+    </div>
 
-    <ul>
+    <div class="box">
       <% for (var i=0; i < newListItems.length; i++){ %>
-        <li> <%= newListItems[i] %> </li>
+        <div class="item">
+          <input type="checkbox">
+          <p> <%= newListItems[i] %> </p>
+        </div>
       <% } %>
-    </ul>
+
+      <form class="item" action="/" method="post">
+        <input type="text" name="newItem", placeholder="New Item" autocomplete="off">
+        <button class="btn btn-warning" type="submit" name="button">+</button>
+      </form>
+    </div>
+
+
+
+
 
   </body>
 </html>
