--- a/Web Development/Blog-ejs/views/partials/footer.ejs
+++ b/Web Development/Blog-ejs/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by The App Brewery</p>
+    <p>Made as a learning exercise for EJS, express and node.js</p>
   </div>
 </div>
 </body>
