--- a/Web Development/Blog-ejs/views/home.ejs
+++ b/Web Development/Blog-ejs/views/home.ejs
@@ -6,7 +6,9 @@
 <% posts.forEach(function(post){ %>
   <div>
     <h2> <%= post.title %> </h2>
-    <p> <%= post.content %> </p>
+    <p> <%= post.content.substring(0, 100) + " ..." %>
+    <a href="/posts/<%=post.title%>")>Read More</a>
+    </p>
   </div>
 <% }) %>
 
